# AwesomeAutoDrive

./: README.md
AwesomeVehicle/: CMakeLists.txt  README.md  vehicle.cpp  vehicle.hpp  vehicle_factory.cpp  vehicle_factory.hpp  vehicle_manager.hpp
AwesomeVehicle/src/: CMakeLists.txt  awe.hpp  awesome_vehicle.cpp  awesome_vehicle.hpp  base_device.cpp  base_device.hpp  base_factory.cpp  base_factory.hpp  main.cpp  vehicle.cpp  vehicle.hpp  vehicle_factory.cpp  vehicle_factory.hpp  vehicle_manager.cpp  vehicle_manager.hpp
AwesomeVehicle/src/borui/: borui.cpp  borui.hpp
AwesomeVehicle/src/communicator/: CMakeLists.txt  communicator.hpp
AwesomeVehicle/src/sensors/: CMakeLists.txt  camera.cpp  camera.hpp  sensor.cpp  sensor.hpp  sensor_factory.cpp  sensor_factory.hpp
AwesomeVehicle/src/sensors/daheng/: daheng.cpp  daheng.hpp
AwesomeVehicle/src/sensors/simple_cam/: simple_vcam.cpp  simple_vcam.hpp
AwesomeVehicle/src/utilities/: CMakeLists.txt  aexception.cpp  aexception.hpp  astring.cpp  astring.hpp  cfgchecker.cpp  cfgchecker.hpp  logtools.cpp  logtools.hpp  typedef.hpp
AwesomeVehicle/utilities/: aexception.cpp  typedef.hpp
AwesomeViewer/: CMakeLists.txt
AwesomeViewer/config/: modelwatch.yaml  rviz.rviz
AwesomeViewer/config/config/: vehicle_control.yaml
AwesomeViewer/config/model_watch/: sensor_status.yaml  vehicle_info.yaml
AwesomeViewer/config/rviz/: awe.rviz  nox.rviz
AwesomeViewer/config/scripts/: sensor_status.py  template.py  vehicle_info.py
AwesomeViewer/ros_tools/src/awe_visualization/: CMakeLists.txt  package.xml  plugin_description.xml
AwesomeViewer/ros_tools/src/awe_visualization/src/: doublevaluemeter.cpp  doublevaluemeter.h
AwesomeViewer/ros_tools/src/hmi_msgs/: CMakeLists.txt  package.xml
AwesomeViewer/ros_tools/src/hmi_msgs/msg/: all_state.msg  double_value_meter.msg  node_state.msg  overlay_text.msg  steering_visualization.msg
AwesomeViewer/ros_tools/src/nox_msgs/: CMakeLists.txt
AwesomeViewer/ros_tools/src/nox_msgs/include/: old_nox_msgs.h
AwesomeViewer/ros_tools/src/nox_msgs/include/nox_msgs/: Bound.h  Boundary.h  Chassis (copy).h  Chassis.h  DrivingCommand.h  Function.h  GetScene.h  GetSceneRequest.h  GetSceneResponse.h  Group.h  GuideLine.h  Location.h  Obstacle.h  ObstacleArray.h  Overlap.h  Path.h  PathPoint.h  Road.h  RoadBlock.h  RoadPoint.h  Scene.h  Signal.h  SignalArray.h  SpeedControl.h  Status.h  StatusArray.h  StopLine.h  Trajectory.h  TrajectoryPoint.h  Vehicle.h
AwesomeViewer/ros_tools/src/nox_msgs/include/nox_msgs/old/: Location.h  Road.h  RoadBlock.h  RoadPoint.h
AwesomeViewer/ros_tools/src/nox_msgs/msg/: Chassis.msg  Obstacle.msg  Signal.msg
AwesomeViewer/scripts/: template.py
AwesomeViewer/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
AwesomeViewer/src/common_widget/: CMakeLists.txt  edittabwidget.cpp  edittabwidget.h
AwesomeViewer/src/common_widget/rvizview/: doublevaluemeter.cpp  doublevaluemeter.h  rvizview.cpp  rvizview.h  visualization_frame.cpp  visualization_frame.h  visualizer_app.cpp  visualizer_app.h
AwesomeViewer/src/config_widget/: CMakeLists.txt  configurewidget.cpp  configurewidget.h  datareccfg.cpp  datareccfg.h  modelconfigwidget.cpp  modelconfigwidget.h
AwesomeViewer/src/data_set_widget/: CMakeLists.txt  bag2datawidget.cpp  bag2datawidget.h  datasetwidget.cpp  datasetwidget.h  dataviewer.cpp  dataviewer.h  pclviewer.cpp  pclviewer.h
AwesomeViewer/src/detail_widget/: CMakeLists.txt  infowidget.cpp  infowidget.h  keystatisticsstatusinfowidget.cpp  keystatisticsstatusinfowidget.h  networkinfowidget.cpp  networkinfowidget.h  statewidget.cpp  statewidget.h  topicwatch.cpp  topicwatch.h
AwesomeViewer/src/main_widget/: CMakeLists.txt  datarec.cpp  datarec.h  mainwidget.cpp  mainwidget.h  pathplayer.cpp  pathplayer.hpp  vehiclecontrol.cpp  vehiclecontrol.hpp
AwesomeViewer/src/packages_ctl_widget/: packagesctlwidget.cpp  packagesctlwidget.h
AwesomeViewer/src/ros_tools_widget/: CMakeLists.txt  rostoolswidget.cpp  rostoolswidget.h
AwesomeViewer/src/utilities/: CMakeLists.txt  cfgfilehelper.cpp  cfgfilehelper.h  datavisualization.cpp  datavisualization.hpp  execctl.cpp  execctl.h  rostools.cpp  rostools.h  utilities.cpp  utilities.h
Document/: 01.无人驾驶现状.md
